test/fixtures/typecheck/fail/UnknownDataType.kite
module UnknownDataType

-- This function is valid, except that Maybe isn't defined anywhere.

idMaybe : Maybe a -> Maybe a
idMaybe = x -> x
